# tutorial_src

./: CMakeLists.txt  LICENSE  tutorial.h  tutorial_src.cpp
tests/: .tutorial_test.cpp.swp  CMakeLists.txt  alltoall_test.cpp  datatype_test.cpp  gather_test.cpp  gather_test_large.cpp  gather_test_nonzero_root.cpp  gather_test_self.cpp  power_method_test.cpp  power_method_val_test.cpp  power_method_vec_test.cpp  test_branch.cpp  test_parallel.cpp  test_speeds.cpp  test_vectorize.cpp  tutorial_test.cpp
